# memory

./: README.md  pyproject.toml  registry.json
examples/: README.md
examples/companion-memory/companion-memory/references/: source.md
examples/companion-memory/companion-memory/references/refs/: eval-companion-memory.yaml  mempalace-bridge.md  persona-relationship.md
examples/companion-memory/companion-memory/references/refs/templates/: memory-gitignore.txt  persona.yaml.md  user-model.yaml  user-model.yaml.md  working.yaml.md
examples/companion-memory/companion-memory/scripts/: memory_lib.py  memory_search.py.md
skill-forge/built/companion-memory/companion-memory/: SKILL.md
skill-forge/built/companion-memory/companion-memory/references/: ir.md
skill-forge/built/companion-memory/companion-memory/references/refs/: agent-protocol.md  consent-security.md  reflection-prompts.md  session-wakeup.md
skill-forge/built/companion-memory/companion-memory/scripts/: memory_cli.py  memory_lib.py.md  memory_search.py
skill-forge/themes/companion-memory/: THEME.md
skill-forge/themes/companion-memory/refs/: cursor-agent-integration.md  eval-companion-memory.yaml.md  literature-matrix.md  md-compat-index.md  memory-schema.yaml  memory-schema.yaml.md  memory-tiers.md  retrieval-rules.md
skill-forge/themes/companion-memory/refs/templates/: episode.yaml.md  memory-gitignore.txt.md  memory-index.yaml  persona.yaml  working.yaml
skill-forge/themes/companion-memory/scripts/: memory_cli.py.md
(+4 files in other folders)
