[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "companion-memory-skills"
version = "2.0.0"
description = "Agent Skills for AI companion long-term memory with CLI-driven lifecycle"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]
keywords = ["agent-skills", "cursor", "memory", "companion", "memgpt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/azhimiao/memory"
Repository = "https://github.com/azhimiao/memory"

[project.scripts]
skill = "skill_core_cli:main"

[tool.setuptools]
py-modules = ["skill_core_cli"]
